hard-gists/0db858e055cc2bae953b435f5116aaa8/run.log
=== Docker Run Log for 0db858e055cc2bae953b435f5116aaa8 ===
Started at: Mi 29. Okt 11:42:40 CET 2025

[2025-10-29 11:42:40] START: Running container for 0db858e055cc2bae953b435f5116aaa8
[2025-10-29 11:42:40] SUCCESS: Container 6285969c2b3392e69f9be1f1aa860d39b7fad82dccb4bba37ddd57299a4e8446 started for 0db858e055cc2bae953b435f5116aaa8
=== Container logs for 0db858e055cc2bae953b435f5116aaa8 ===
  File "/snippet.py", line 42
    print 'Usage: en-decrypt.py -p <password> < encrypted.enex > decrypted.enex'
    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for 0db858e055cc2bae953b435f5116aaa8 ===
[2025-10-29 11:42:42] INFO: Container 6285969c2b3392e69f9be1f1aa860d39b7fad82dccb4bba37ddd57299a4e8446 has stopped
